--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,55 @@
 
+.navbar-brand {
+    color: rgb(223, 221, 221);
+}
+.navbar-nav * {
+    color: rgb(223, 221, 221);
+}
+.navbar-brand:hover {
+    color: rgb(107, 106, 106);
+}
+.navbar-nav *:hover {
+    color: rgb(107, 106, 106);
+}
+
+.navbar-toggler-icon *{
+    color: rgb(255, 255, 255);
+}
+
+.navbar-toggler *{
+    color: rgb(255, 255, 255);
+
+}
+
+.card-img-top{
+    background-color: gray;
+    width: 100%;
+    height: 150px;
+    color: #a1a1a2;
+    
+}
+
+.navbar-nav .nav-link.active{
+color: white;
+}
+
+.navbar-nav .nav-link.active:hover{
+    color: rgb(219, 218, 218) ;
+}
+
+.jumbotron{
+    background-color: #cccccc;
+}
+
+.footer{
+ height: 100%;
+ width: 100%;
+ color: #ffffff;
+ font-size: 16px;
+ font-family: 'Times New Roman', Times, serif;
+
+}
+
 /* 
 
     You can write your own styles here...
